Client + Leader are now listening to different signalr messages

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -16,4 +16,6 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <Import Project="..\_SharedSignalR\_SharedSignalR.projitems" Label="Shared" />
+
 </Project>
