--- a/MauiBlazor/MauiBlazor.csproj
+++ b/MauiBlazor/MauiBlazor.csproj
@@ -58,6 +58,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Components\Common\" />
       <Folder Include="Data\" />
     </ItemGroup>
 
