Changed models and injected SignalrContext as a singleton. Also added appsettings.json with signalr connection-string.

--- a/MauiBlazor/MauiBlazor.csproj
+++ b/MauiBlazor/MauiBlazor.csproj
@@ -64,4 +64,6 @@
 
     <Import Project="..\_SharedSignalR\_SharedSignalR.projitems" Label="Shared" />
 
+    <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="{" /></VisualStudio></ProjectExtensions>
+
 </Project>
