--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -22,9 +22,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7242;http://localhost:5169",
+      "applicationUrl": "https://localhost:7242;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
