android emu can now connect to signalR via http

--- a/MauiBlazor/appsettings.json
+++ b/MauiBlazor/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Signalr": "https://localhost:7242/signalr"
+    "Signalr": "https://localhost:7242/signalr",
+    "SignalrAndroid": "http://10.0.2.2:5169/signalr"
   }
 }
