--- a/MauiBlazor/MauiBlazor.csproj
+++ b/MauiBlazor/MauiBlazor.csproj
@@ -62,6 +62,11 @@
       <None Remove="Resources\Images\mug_hot.svg" />
       <None Remove="Resources\Images\shirt.svg" />
       <None Remove="Resources\Images\users.svg" />
+      <None Remove="Resources\xml\network_security_config.xml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AndroidResource Include="Resources\xml\network_security_config.xml" />
     </ItemGroup>
 
     <ItemGroup>
