Button and inputs

--- a/MauiBlazor/MauiBlazor.csproj
+++ b/MauiBlazor/MauiBlazor.csproj
@@ -57,6 +57,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="Pages\General\Client.razor.css" />
+      <None Remove="Pages\General\Home.razor.css" />
+      <None Remove="Pages\General\JoinRoom.razor.css" />
       <None Remove="Resources\Images\calendar_week.svg" />
       <None Remove="Resources\Images\infinity.svg" />
       <None Remove="Resources\Images\mug_hot.svg" />
@@ -67,6 +70,12 @@
 
     <ItemGroup>
       <AndroidResource Include="Resources\xml\network_security_config.xml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="Pages\General\Client.razor.css" />
+      <Content Include="Pages\General\Home.razor.css" />
+      <Content Include="Pages\General\JoinRoom.razor.css" />
     </ItemGroup>
 
     <ItemGroup>
