--- a/MauiBlazor/appsettings.json
+++ b/MauiBlazor/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    //"Signalr": "https://localhost:7242/signalr",
-   "Signalr": "http://localhost:5555/signalr",
+   "Signalr": "https://localhost:7242/signalr",
+   //"Signalr": "http://localhost:5555/signalr",
     "SignalrAndroid": "http://10.0.2.2:5169/signalr"
   }
 }
