--- a/MauiBlazor/MauiBlazor.csproj
+++ b/MauiBlazor/MauiBlazor.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
+        <!--<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>-->
 		<!--<TargetFrameworks>net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>-->
 		<TargetFrameworks>net6.0-windows10.0.19041.0</TargetFrameworks>
 		<!--<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>-->
@@ -53,60 +53,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Remove="appsettings.json" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="Pages\General\Client.razor.css" />
-      <None Remove="Pages\General\Home.razor.css" />
-      <None Remove="Pages\General\JoinRoom.razor.css" />
-      <None Remove="Pages\General\Lobby.razor.css" />
-      <None Remove="Pages\PokerPlanning\ClientVoteView.razor.css" />
-      <None Remove="Resources\Images\calendar_week.svg" />
-      <None Remove="Resources\Images\infinity.svg" />
-      <None Remove="Resources\Images\mug_hot.svg" />
-      <None Remove="Resources\Images\shirt.svg" />
-      <None Remove="Resources\Images\users.svg" />
-      <None Remove="Resources\xml\network_security_config.xml" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <AndroidResource Include="Resources\xml\network_security_config.xml" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Content Include="Pages\General\Client.razor.css" />
-      <Content Include="Pages\General\Home.razor.css" />
-      <Content Include="Pages\General\JoinRoom.razor.css" />
-      <Content Include="Pages\General\Lobby.razor.css" />
-      <Content Include="Pages\PokerPlanning\ClientVoteView.razor.css" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Include="appsettings.json" />
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Components\Common\" />
       <Folder Include="Data\" />
     </ItemGroup>
 
-    <ItemGroup>
-      <MauiImage Include="wwwroot\Images\calendar_week.svg" />
-      <MauiImage Include="wwwroot\Images\infinity.svg" />
-      <MauiImage Include="wwwroot\Images\mug_hot.svg" />
-      <MauiImage Include="wwwroot\Images\users.svg" />
-    </ItemGroup>
-
     <Import Project="..\_SharedSignalR\_SharedSignalR.projitems" Label="Shared" />
-
-    <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="{" XamarinHotReloadDebuggerTimeoutExceptionMauiBlazorHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
